# hsm-ide

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  build.sh  build_simple.sh  format.sh  hsm-ide.code-workspace  justfile  package.sh  setup.sh  start_agent.sh  validate.sh
idecpp/hsm_ide/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  recent.py
idecpp/hsm_ide/elements/: HsmElementsFactory.cpp  HsmElementsFactory.hpp  HsmEntryPointElement.cpp  HsmEntryPointElement.hpp  HsmExitPointElement.cpp  HsmExitPointElement.hpp  HsmFinalElement.cpp  HsmFinalElement.hpp  HsmFinalElement.py  HsmHistoryElement.cpp  HsmHistoryElement.hpp  HsmStartElement.cpp  HsmStartElement.hpp  HsmStartElement.py  HsmStateElement.cpp  HsmStateElement.hpp  HsmTransition.cpp  HsmTransition.hpp
idecpp/hsm_ide/elements/private/: ElementBoundaryGripItem.cpp  ElementBoundaryGripItem.hpp  ElementConnectionArrow.cpp  ElementConnectionArrow.hpp  (+8 more)
idecpp/hsm_ide/managers/: RecentFilesManager.cpp  RecentFilesManager.hpp
idecpp/hsm_ide/ui/: main.ui
idecpp/hsm_ide/widgets/: HsmElementsList.cpp  HsmElementsList.hpp  HsmGraphicsView.cpp  HsmGraphicsView.hpp  QClickableSlider.cpp  QClickableSlider.hpp  QImageViewArea.cpp  QImageViewArea.hpp
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  settings.py  utils.py
src/common/: ObjectUtils.cpp
src/controllers/: IProjectController.cpp  IProjectController.hpp  MainEditorController.cpp  MainEditorController.hpp  ModificationHistoryController.cpp  ModificationHistoryController.hpp  ProjectController.cpp  ProjectController.hpp  RecentFilesManager.cpp  RecentFilesManager.hpp  SettingsController.cpp  SettingsController.hpp
src/elements/: HsmElementsFactory.cpp  HsmElementsFactory.hpp  HsmEntryPointElement.hpp  HsmStartElement.cpp  HsmTransition.cpp  HsmTransition.hpp
src/elements/private/: ElementBoundaryGripItem.cpp  ElementConnectionArrow.cpp  ElementConnectionArrow.hpp  ElementGripItem.cpp  ElementGripItem.hpp  HsmConnectableElement.cpp  HsmConnectableElement.py  HsmResizableElement.hpp  HsmResizableElement.py
src/model/: EntryPoint.cpp  EntryPoint.hpp  ExitPoint.cpp  ExitPoint.hpp  FinalState.cpp  FinalState.hpp  HistoryState.cpp  HistoryState.hpp  IncludeEntity.cpp  IncludeEntity.hpp  InitialState.cpp  InitialState.hpp  ModelElementsFactory.cpp  ModelElementsFactory.hpp  ModelRootState.cpp  ModelRootState.hpp  ModelTypes.cpp  ModelTypes.hpp  ModelUtils.cpp  ModelUtils.hpp  RegularState.cpp  RegularState.hpp  SelfTransition.cpp  SelfTransition.hpp  State.cpp  State.hpp  StateHierarchyRules.cpp  StateHierarchyRules.hpp  StateMachineElement.cpp  StateMachineElement.hpp  StateMachineEntity.cpp  StateMachineEntity.hpp  StateMachineModel.cpp  StateMachineModel.hpp  StateMachineSerializer.cpp  StateMachineSerializer.hpp  Transition.cpp  Transition.hpp
src/model/actions/: CallbackAction.cpp  CallbackAction.hpp  IModelAction.hpp  ModelActionFactory.cpp  ModelActionFactory.hpp  NoneAction.cpp  NoneAction.hpp  SendEventAction.cpp  SendEventAction.hpp  TimerRestartAction.cpp  TimerRestartAction.hpp  TimerStartAction.cpp  TimerStartAction.hpp  TimerStopAction.cpp  TimerStopAction.hpp
src/model/private/: IModelVisitor.hpp  IdentifierString.hpp  StateMachineEntity.hpp
src/view/: AboutDialog.cpp  AboutDialog.hpp  MainWindow.cpp  MainWindow.hpp
src/view/common/: ViewUtils.cpp  ViewUtils.hpp
src/view/elements/: ElementTypeIds.hpp  HsmElementsFactory.cpp  HsmElementsFactory.hpp  HsmElementsFactory.py  HsmEntryPointElement.cpp  HsmEntryPointElement.hpp  HsmExitPointElement.cpp  HsmExitPointElement.hpp  HsmExitPointElement.py  HsmFinalElement.cpp  HsmFinalElement.hpp  HsmHistoryElement.cpp  HsmHistoryElement.hpp  HsmHistoryElement.py  HsmIncludeElement.cpp  HsmIncludeElement.hpp  HsmInitialElement.cpp  HsmInitialElement.hpp  HsmStartElement.cpp  HsmStartElement.hpp  HsmStateElement.cpp  HsmStateElement.hpp  HsmTransition.cpp  HsmTransition.hpp  HsmTransition.py
src/view/models/: FilteredFileSystemProxyModel.cpp  FilteredFileSystemProxyModel.hpp  NonEmptyDirFileSystemProxyModel.cpp  NonEmptyDirFileSystemProxyModel.hpp  StateMachineEntityViewModel.cpp  StateMachineEntityViewModel.hpp  StateMachineTreeModel.cpp  StateMachineTreeModel.hpp
src/view/res/: icons.ai  resources.qrc
src/view/theme/: Theme.hpp  ThemeManager.cpp  ThemeManager.hpp
src/view/ui/: about.ui  main.ui
src/view/widgets/: HsmElementsList.cpp  HsmElementsList.hpp  HsmEntityPropertyDelegate.cpp  HsmEntityPropertyDelegate.hpp  HsmGraphicsView.cpp  HsmGraphicsView.hpp  HsmPropertiesTableView.cpp  HsmPropertiesTableView.hpp  HsmTreeView.cpp  HsmTreeView.hpp  QClickableSlider.cpp  QClickableSlider.hpp  QImageViewArea.cpp  QImageViewArea.hpp  WorkspaceView.cpp  WorkspaceView.hpp
src/widgets/: HsmElementsList.hpp  HsmGraphicsView.cpp  HsmGraphicsView.hpp  QClickableSlider.cpp  QClickableSlider.hpp  QImageViewArea.cpp  qimageviewarea.py
tests/: CMakeLists.txt  QtTestCompat.hpp  StateMachineSerializerTest.cpp  TestMain.cpp
tests/data/: geometry.scxml
tests/data/manual_tests/: all_elements.scxml  substates_dbg.scxml  transitions.scxml
tests/data/scxml/: callbacks.scxml  entrypoint_multiple.scxml  exitpoint.scxml  guarded_transition.scxml  history_deep.scxml  history_shallow.scxml  include_entity.scxml  initial_and_final.scxml  malformed_missing_state_id.scxml  malformed_not_xml.scxml  multiple_transitions.scxml  substates.scxml
tests/model/: EntryPointTest.cpp  ExitPointTest.cpp  FinalStateTest.cpp  HistoryStateTest.cpp  IncludeEntityTest.cpp  InitialStateTest.cpp  ModelActionsTest.cpp  ModelElementsFactoryTest.cpp  ModelRootStateTest.cpp  ModelTypesTest.cpp  RegularStateTest.cpp  SelfTransitionTest.cpp  StateHierarchyRulesTest.cpp  StateMachineEntityTest.cpp  StateMachineModelTest.cpp  TestPaths.hpp  TransitionTest.cpp
tests/model/StateMachineSerializer/: StateMachineSerializerDeserializationTest.cpp  StateMachineSerializerSerializationTest.cpp
tests/models/: dragging.scxml  substates.scxml
tests/view/: HsmGraphicsViewTest.cpp
(+88 files in other folders)
